# Synapse-ai

./: .gitignore  README.md  main.py  pyproject.toml  test_mic_rms.py  test_qdrant.py  test_whisper.py
super_ai/: __init__.py  __main__.py  actions.py  config.py  dependency_manager.py  embeddings.py  llm.py  memory.py  messaging.py  model_manager.py  privacy.py  speech.py  understanding.py  video.py
